# ai-music-collaborator

./: .gitignore  ARCH.md  CODEOWNERS  PLAN.md  PRODUCT_BRIEF.md  README.md  TODO.md  docker-compose.dev.yml  package.json  turbo.json
.github/workflows/: ci.yml  deploy.yml
api/: package.json  tsconfig.json
api/src/: app.module.ts  main.ts
api/src/config/: database.config.ts  telemetry.config.ts
api/src/entities/: chord.entity.ts  export.entity.ts  lyrics.entity.ts  midi-part.entity.ts  mix.entity.ts  organization.entity.ts  preset.entity.ts  project.entity.ts  rights.entity.ts  section.entity.ts  stem.entity.ts  user.entity.ts
api/src/modules/export/: export.controller.ts  export.module.ts  export.service.ts
api/src/modules/export/dto/: export.dto.ts
api/src/modules/generate/: generate.controller.ts  generate.module.ts  generate.service.ts
api/src/modules/generate/dto/: generate.dto.ts
api/src/modules/generate/guards/: prosody.guard.ts
api/src/modules/governance/: content-policy.service.ts  governance.module.ts  governance.service.ts  versioning.service.ts
api/src/modules/governance/dto/: governance.dto.ts
api/src/modules/health/: health.controller.ts  health.service.ts
api/src/modules/render/: render.controller.ts  render.module.ts  render.service.ts
api/src/modules/render/dto/: render.dto.ts
api/src/modules/upload/: upload.controller.ts  upload.module.ts  upload.service.ts
api/src/modules/upload/dto/: upload.dto.ts
frontend/: package.json
frontend/app/render/: page.tsx
frontend/components/: audio-upload.tsx  export-wizard.tsx  lyrics-editor.tsx  mixer.tsx  reharm-editor.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/editor/: PianoRoll.tsx  Timeline.tsx
frontend/src/lib/: utils.ts
infra/: init-db.sql  prometheus.yml
infra/grafana/dashboards/: music-pipeline.json
workers/: audio_midi_converter.py  pyproject.toml  requirements.txt
workers/graph/: nodes.py
workers/src/graph/: __init__.py  nodes.py  pipeline.py  state.py
workers/tests/: test_audio_midi_converter.py
